deploy/code-kitchen/network-policy.yaml
# It applies the policy to ALL pods in the named namespace, as the spec.podSelector.matchLabels is empty and therefore selects all pods
# It allows traffic from ALL pods in the named namespace, as spec.ingress.from.podSelector is empty and therefore selects all pods

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-from-other-namespaces-except-nginx
spec:
  podSelector:
    matchLabels:
      app: nginx-nginx-ingress
  ingress:
    - from:
        - podSelector: {}
